overflow fixed

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -187,7 +187,10 @@
     }
 
     #accordion-3-mobile{
-        
+
     }
  
+    .informacoes-cursos-subtitle{
+        display: none;
+    }
   }
